--- a/html/index.html
+++ b/html/index.html
@@ -31,6 +31,6 @@
         <button id="submit-btn" class="submit-btn">Submit Entry</button>
     </div> 
 
-    <script src="../index.js"></script>
+    <script type="module" src="../scripts/index.js"></script>
 </body>
 </html>
