--- a/html/entries.html
+++ b/html/entries.html
@@ -9,6 +9,6 @@
     <div id="diary-entry" class="diary entries">
 
     </div>
-    <script src="../index.js"></script>
+    <script type="module" src="../scripts/entries.js"></script>
 </body>
 </html>
